# spot-vrl

./: .flake8  .gitignore  .gitmodules  README.md  batch_spot_extract.sh  environment.yml  experiment_readme  kill_all.sh  kill_tensorboard.sh  pyproject.toml  spot_extract.sh  todolist.md
datasets/: README.md  README.txt
datasets/eerlawn/: holdout.json  train.json
datasets/satvrl1/: holdout.json  train.json
datasets/satvrl2/: holdout.json  train.json
datasets/satvrl3/: holdout.json  sdf  train.json
datasets/v2-00initial/: README.txt  holdout.json
datasets/v2-01pebble/: README.txt  holdout.json  train.json
datasets/v2-02pebble/: README.txt  train.json
datasets/v2-03shadows/: README.txt  holdout.json
datasets/v2-03ybrick/: holdout.json  train.json
datasets/v2-04rbrick/: holdout.json  train.json
datasets/v2-04shadows/: README.txt  train.json
datasets/v2-05rybrick/: holdout.json  train.json
datasets/v2-06winter/: holdout.json  train.json
datasets/v2-20initnight/: holdout.json  train.json
datasets/v2-21pebbnight/: holdout.json  train.json
datasets/v2-98night/: holdout.json  train.json
jackal_data/: dataset_config_haresh_local.yaml  different.yaml  test.yaml
launch/: parse_rosbag.launch
scripts/: 25_train_jackal.py  _25_train_jackal.py  ambitious_gui.py  baseline_25_train_jackal.py  cluster_jackal.py  coeff_script  convert_to_jit.py  custom_data.py  dict_custom_data.py  disk_img.py  extraction_script  fourpthomography.py  freq_domain_analysis.py  gui.py  homography_jackal.py  imu_fft.py  l1_coeff_tune_script  l1_only.py  l2_only.py  lr_scheduler.py  models.py  optimizer.py  plot_naturl_cost.py  plot_rca_cost.py  process_bddl_files.py  recurrent_model.py  s2_custom_data.py  s2_train_jackal.py  sample.ipynb  sort_dataset.py  spot_extract_data.py  test_rca.py  tkinter_gui.py  to_disk_script  train.py  train_jackal.py  train_jackal_ae.py  train_naturl_cost.py  train_naturl_representations.py  train_oracle_cost.py  (+8 more)
spot_data/: all_bag_names.txt  bag_names.txt  data_config.yaml  data_config_all.yaml  data_statistics.pkl  data_statistics_all.pkl  rca_costs.pkl
spot_vrl/: __init__.py
(+88 files in other folders)
