[tool.poetry]
name = "spot-vrl"
version = "0.1.0"
description = ""
authors = ["Elvin Yang <eyang@cs.utexas.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
bosdyn-api = "=3.0.3"
bosdyn-client = "=3.0.3"
bosdyn-core = "=3.0.3"
requests = "^2.27.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scipy = "^1.7.3"
opencv-python = "^4.5.5"
tqdm = "^4.62.3"
torch = "^1.10.2"
torchvision = "^0.11.3"
tensorboard = "^2.8.0"
scikit-learn = "^1.0.2"
loguru = "^0.6.0"

# Dependencies for rosbag
PyYAML = "^6.0"
pycryptodomex = "^3.14.1"
python-gnupg = "^0.4.8"
rospkg = "^1.4.0"
simplejpeg = "^1.6.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"
types-protobuf = "^3.19.7"
torch-tb-profiler = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
disallow_untyped_calls = true
warn_return_any = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "bosdyn.*",
    "cv2",
    "matplotlib.*",
    "scipy.*",
    "seaborn",
    "simplejpeg",
    "torchvision.*",
    "tqdm",
]
ignore_missing_imports = true

# ROS system packages
[[tool.mypy.overrides]]
module = [
    "geometry_msgs.*",
    "nav_msgs.*",
    "rosbag",
    "rospy",
    "sensor_msgs.*",
    "spot_msgs.*",
    "tf2_msgs.*",
]
ignore_missing_imports = true
